[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultos-events"
version = "0.1.0"
description = "Facility event engine: pub/sub bus, alerts, deduplication, and interactive CLI (Vault OS Day 19)."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["events", "pubsub", "alerts", "cli", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["events*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
